[gd_scene load_steps=17 format=3 uid="uid://cv8wyq014x0hi"]

[ext_resource type="Script" path="res://battle.gd" id="1_o8jua"]
[ext_resource type="Texture2D" uid="uid://bkrkdvv7tbis" path="res://MobileRPG Resources/Images/Dungeon.png" id="1_ptltk"]
[ext_resource type="Texture2D" uid="uid://f3hcyi0ywul5" path="res://MobileRPG Resources/Images/Mobile RPG Mockup.png" id="1_vtett"]
[ext_resource type="Script" path="res://PlayerStats.gd" id="2_5o2xg"]
[ext_resource type="PackedScene" uid="uid://jeka3apkvt7g" path="res://rat.tscn" id="2_k5pd0"]
[ext_resource type="PackedScene" uid="uid://kgw2hxkf53gr" path="res://evil_eye.tscn" id="4_cgp22"]
[ext_resource type="PackedScene" uid="uid://ckfafj48hogq8" path="res://slime.tscn" id="4_r1j1r"]
[ext_resource type="PackedScene" uid="uid://cly7d303trqx7" path="res://shroom.tscn" id="5_xqfmy"]
[ext_resource type="Script" path="res://StatsPanel.gd" id="6_qa8of"]
[ext_resource type="PackedScene" uid="uid://chd02q0h6nw8" path="res://sword_action_button.tscn" id="7_g8x35"]
[ext_resource type="PackedScene" uid="uid://bp45b7cd0cuj6" path="res://heal_action_button.tscn" id="8_3oew6"]
[ext_resource type="PackedScene" uid="uid://di4pjy52v56wy" path="res://flame_magic.tscn" id="12_tc2mp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eunbi"]

[sub_resource type="Animation" id="Animation_ie2go"]
resource_name = "FadeToNewRoom"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7fr2h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ymrn"]
_data = {
"FadeToNewRoom": SubResource("Animation_ie2go"),
"RESET": SubResource("Animation_7fr2h")
}

[node name="Battle" type="Node"]
script = ExtResource("1_o8jua")
enemies = Array[PackedScene]([ExtResource("2_k5pd0"), ExtResource("4_r1j1r"), ExtResource("4_cgp22"), ExtResource("5_xqfmy")])

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("2_5o2xg")

[node name="Dungeon" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(45, 80)
texture = ExtResource("1_ptltk")

[node name="EnemyPosition" type="Marker2D" parent="."]
position = Vector2(46, 33)

[node name="Slime" parent="EnemyPosition" instance=ExtResource("4_r1j1r")]

[node name="MobileRpgMockup" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(45, 80)
texture = ExtResource("1_vtett")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 0
offset_right = 90.0
offset_bottom = 52.0
mouse_filter = 2

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(70, 13)
layout_mode = 2
mouse_filter = 1
text = "Enter Next 

Room"

[node name="StatsPanel" type="Panel" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_left = 3.0
offset_top = 52.0
offset_right = 87.0
offset_bottom = 71.0
script = ExtResource("6_qa8of")

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
custom_minimum_size = Vector2(20, 15)
layout_mode = 2
size_flags_horizontal = 3
text = "HP
25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
custom_minimum_size = Vector2(20, 15)
layout_mode = 2
size_flags_horizontal = 3
text = "AP
3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
custom_minimum_size = Vector2(20, 15)
layout_mode = 2
size_flags_horizontal = 3
text = "MP
10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextBoxPanel" type="Panel" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_left = -2.0
offset_top = 136.0
offset_right = 92.0
offset_bottom = 161.0

[node name="Textbox" type="RichTextLabel" parent="UI/TextBoxPanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 92.0
offset_bottom = 23.0
theme_override_constants/line_separation = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_eunbi")
scroll_active = false

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
layout_mode = 0
offset_left = 5.0
offset_top = 73.0
offset_right = 86.0
offset_bottom = 132.0
theme_override_constants/h_separation = 11
theme_override_constants/v_separation = 3
columns = 2

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource("7_g8x35")]
layout_mode = 2

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource("8_3oew6")]
layout_mode = 2

[node name="Flame" parent="UI/BattleActionButtons" instance=ExtResource("12_tc2mp")]
layout_mode = 2
text = "Flame"

[node name="Fade" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ymrn")
}

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_player_stats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_player_stats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_player_stats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_next_room_button_pressed"]
